--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,5 @@
 sonar.projectKey=cicd-testing-sonar
+sonar.login=admin
+sonar.passward=root
+sonar.host.url=http://localhost:9000
+sonar.sources=/Users/sohanjoshi/.jenkins/workspace/cicd-sonar-pipeline/
